--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,6 @@
 
 }
 html,body{
-    scroll-behavior: smooth;
     background: linear-gradient(135deg, #003366, #5386d2); 
 
 }
@@ -19,11 +18,10 @@ main   {
 
 main header nav 
 {
-
     width: 100%;
     position: relative;
     z-index: 9999;
-    top: -70px;
+    top: -80px;
 }
 
 main header nav .container .nav-right .navbar-nav {
@@ -61,8 +59,6 @@ main header nav .container .nav-right .navbar-nav li:hover a{
     z-index: 2;
 }
 
-
-
 main header .header-bottom .img-wrapper {
     height: 100%;
     width: 100%;
@@ -78,10 +74,7 @@ main header .header-bottom .img-wrapper img {
     width: 90%;
     padding: 0.2vw;
     border-radius: 50%;
-    /* border-top: 1px solid rgb(0, 0, 0,.2); */
-    /* background-position: center; */
     object-fit: cover;
-    /* box-shadow: 0 2px 5px 2px rgb(0, 0, 0,0.5);  */
 }
 
 .text-gradient { 
@@ -145,11 +138,11 @@ main header .header-bottom .btn-effect:hover span{
         width: 100%;
         position: relative;
         z-index: 9999;
-        top: -10px;
+        top: -20px;
     }
 }
 
-/* onlu for tab */
+/* only for tab */
 @media (width:768px) { 
     main header nav 
     {
