--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,9 +19,10 @@ main   {
 main header nav 
 {
     width: 100%;
-    position: relative;
+    position: fixed !important;
     z-index: 9999;
     top: -80px;
+    left: 0;
 }
 
 main header nav .container .nav-right .navbar-nav {
