--- a/CSS/media.css
+++ b/CSS/media.css
@@ -28,3 +28,38 @@
         z-index: -9;
     }
 }
+@media (max-width:600px) {
+    main{
+        position: relative;
+        z-index: 1;
+    }
+    
+    main header nav 
+    {
+        width: 100%;
+        position: relative;
+        z-index: 9999;
+        top: -15px;
+    }
+}
+
+/* only for tab */
+@media (width:768px) { 
+    main header nav 
+    {
+        width: 100%;
+        position: relative;
+        z-index: 9999;
+        top: -40px;
+    }
+}
+
+@media (width:1024px) {
+    main header nav 
+    {
+        width: 100%;
+        position: relative;
+        z-index: 9999;
+        top: -50px;
+    }
+}
